bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:6: error: ')' expected but 'return' found.
  return false
  ^